--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -37,7 +37,7 @@
             <h2>Наші особливості</h2>
             <ul>
                 <li>
-                    <h4> УВАГА ДО ДЕТАЛЕЙ</h4>
+                    <h3> УВАГА ДО ДЕТАЛЕЙ</h3>
                     <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                 </li>
                 <li>
@@ -61,9 +61,9 @@
         <section>
             <h2>Чим ми займаємося</h2>
                 <ul>
-                    <li><img src="./images/box1.jpg" alt="Writes code" width="370"></li>
-                    <li><img src="./images/box2.jpg" alt="mobile application" width="370"></li>
-                    <li><img src="./images/box3.jpg" alt="graphic design" width="370"></li>
+                    <li><img src="./images/box-1.jpg" alt="Writes code" width="370" height="294"></li>
+                    <li><img src="./images/box-2.jpg" alt="mobile application" width="370" height="294"></li>
+                    <li><img src="./images/box-3.jpg" alt="graphic design" width="370" height="294"></li>
                 </ul>  
         </section>
 
@@ -71,23 +71,23 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./images/ProductDesigner.jpg" alt="Product Designer" width="270">
-                    <p>Ігор Дем'яненко</p>
+                    <img src="./images/ProductDesigner.jpg" alt="Product Designer" width="270" height="368">
+                    <h3>Ігор Дем'яненко</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/Frontend-img.jpg" alt="Frontend" width="270">
-                    <p>Ольга Рєпіна</p>
+                    <img src="./images/Frontend-img.jpg" alt="Frontend" width="270" height="368">
+                    <h3>Ольга Рєпіна</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/marketing-img.jpg" alt="marketing" width="270">
-                    <p>Микола Тарасов</p>
+                    <img src="./images/marketing-img.jpg" alt="marketing" width="270" height="368">
+                    <h3>Микола Тарасов</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/Designer-img.jpg" alt="Designer" width="270">
-                    <p>Михайло Єрмаков</p>
+                    <img src="./images/Designer-img.jpg" alt="Designer" width="270" height="368">
+                    <h3>Михайло Єрмаков</h3>
                     <p>UI Designer</p>
                 </li>
             </ul>
@@ -99,7 +99,7 @@
         <a href="./index.html">WebStudio</a>
         <address>
             <ul>
-                <li> м. Київ, пр-т Лесі Українки, 26 </li>
+                <li> <a href=""> м. Київ, пр-т Лесі Українки, 26 </a> </li>
                 <li> <a href="mailto:info@example.com">info@example.com</a></li>
                 <li> <a href="tel:+380991111111">+38 099 111 11 11</a></li>
             </ul>
